# pygame_rocket

./: LICENSE  README.md  pyproject.toml
gravity_game/: __main__.py  main_loop.py  planet.py  satellite.py
pygame_rocket/: __main__.py  geometry.py  gravity.py  main_loop.py  planet.py  rocket.py
pygame_rocket/sprites/: __init__.py
